Fix double y scrollbar on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,6 @@
   list-style: none;
 }
 
-.app {
-  width: 100%;
-}
-
 .unstyled-button {
   background: none;
   color: inherit;
